# Todo-app

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: interface-designer.md  persistence-architect.md  system-guardian.md
.claude/skills/code-example-generator/: SKILL.md
.claude/skills/code-validation-sandbox/: SKILL.md
.claude/skills/frontend-design/: SKILL.md
.claude/skills/spec-architect/: SKILL.md
.claude/skills/technical-clarity/: SKILL.md
.claude/skills/validation-auditor/: SKILL.md
.claude/skills/visual-asset-workflow/: SKILL.md
.specify/memory/: constitution.md
specs/todo-console/: plan.md  spec.md  tasks.md
src/: __init__.py  __main__.py
src/cli/: __init__.py  menu.py
src/models/: __init__.py  task.py
src/services/: __init__.py  task_manager.py
tests/: __init__.py  test_task.py  test_task_manager.py
